<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.washington.briluu.quizdroid.QuestionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/question" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/question"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/answers">

            <RadioButton
                android:text="@string/option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_choice"
                android:layout_weight="1"/>

            <RadioButton
                android:text="@string/correct_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/second_choice"
                android:layout_weight="1"/>

            <RadioButton
                android:text="@string/option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/third_choice"
                android:layout_weight="1"/>

            <RadioButton
                android:text="@string/option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fourth_choice"
                android:layout_weight="1"/>
        </RadioGroup>

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="74dp"
            android:id="@+id/submit"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Small"
            android:visibility="invisible" />

    </RelativeLayout>

</FrameLayout>
