<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.washington.briluu.quizdroid.AnswerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="74dp"
            android:id="@+id/next"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Small" />

        <TextView
            android:text="@string/answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:id="@+id/userAnswer"
            android:layout_below="@+id/answer_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:id="@+id/answer_2"
            android:text="@string/answer_2"
            android:layout_below="@+id/userAnswer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answersCorrect"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:id="@+id/correctAnswer"
            android:text="@string/correct_option"
            android:layout_below="@+id/answer_2"
            android:layout_alignLeft="@+id/userAnswer"
            android:layout_alignStart="@+id/userAnswer" />


    </RelativeLayout>


</FrameLayout>
