<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.washington.briluu.quizdroid.QuestionActivity">

    <TextView
        android:text="@string/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/question" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/answers">

        <RadioButton
            android:text="@string/option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_choice"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/correct_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_choice"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/third_choice"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fourth_choice"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:id="@+id/submit"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Small"
        android:visibility="invisible" />

</RelativeLayout>
